semesters/spring2021/HW4 - 95542247/q3/gen/Assignment4q3Parser.py
# Generated from C:/Users/novin/PycharmProjects/tamrin-compiler\Assignment4q3.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Assignment4q3Parser ( Parser ):

    grammarFileName = "Assignment4q3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'if'", "'else'", "'while'", 
                     "'System.out.println'", "'='", "'&&'", "'<'", "'+'", 
                     "'-'", "'*'", "'.'", "'length'", "'true'", "'false'", 
                     "'this'", "'new'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "INTEGER_LITERAL", "WS", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type = 5
    RULE_statement = 6
    RULE_expression = 7
    RULE_identifier = 8

    ruleNames =  [ "program", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type", "statement", "expression", 
                   "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    IDENTIFIER=36
    INTEGER_LITERAL=37
    WS=38
    LINE_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    label_counter = 0
    temp_counter = 0
    def create_temp(self):
        self.temp_counter += 1
        return 'T' + str(self.temp_counter)
    def remove_temp(self):
        self.temp_counter -= 1
    def get_temp(self):
        return 'T' + str(self.temp_counter)
    def create_label(self):
        self.label_counter += 1
        return 'L' + str(self.label_counter)



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.m = None # MainClassContext
            self.c = None # ClassDeclarationContext

        def EOF(self):
            return self.getToken(Assignment4q3Parser.EOF, 0)

        def mainClass(self):
            return self.getTypedRuleContext(Assignment4q3Parser.MainClassContext,0)


        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = Assignment4q3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            localctx.m = self.mainClass()
            localctx.value_attr = localctx.m.value_attr
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Assignment4q3Parser.T__0:
                self.state = 20
                localctx.c = self.classDeclaration()
                localctx.value_attr = localctx.value_attr + localctx.c.value_attr
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(Assignment4q3Parser.EOF)

            print(localctx.value_attr)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.i1 = None # IdentifierContext
            self.i2 = None # IdentifierContext
            self.st = None # StatementContext

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.IdentifierContext,i)


        def statement(self):
            return self.getTypedRuleContext(Assignment4q3Parser.StatementContext,0)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = Assignment4q3Parser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(Assignment4q3Parser.T__0)
            self.state = 32
            localctx.i1 = self.identifier()
            self.state = 33
            self.match(Assignment4q3Parser.T__1)
            self.state = 34
            self.match(Assignment4q3Parser.T__2)
            self.state = 35
            self.match(Assignment4q3Parser.T__3)
            self.state = 36
            self.match(Assignment4q3Parser.T__4)
            self.state = 37
            self.match(Assignment4q3Parser.T__5)
            self.state = 38
            self.match(Assignment4q3Parser.T__6)
            self.state = 39
            self.match(Assignment4q3Parser.T__7)
            self.state = 40
            self.match(Assignment4q3Parser.T__8)
            self.state = 41
            self.match(Assignment4q3Parser.T__9)
            self.state = 42
            localctx.i2 = self.identifier()
            self.state = 43
            self.match(Assignment4q3Parser.T__10)
            self.state = 44
            self.match(Assignment4q3Parser.T__1)
            self.state = 45
            localctx.st = self.statement()
            self.state = 46
            self.match(Assignment4q3Parser.T__11)
            self.state = 47
            self.match(Assignment4q3Parser.T__11)
            localctx.value_attr = localctx.st.value_attr

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.i1 = None # IdentifierContext
            self.i2 = None # IdentifierContext
            self.v1 = None # VarDeclarationContext
            self.m1 = None # MethodDeclarationContext

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.IdentifierContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = Assignment4q3Parser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(Assignment4q3Parser.T__0)
            self.state = 51
            localctx.i1 = self.identifier()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Assignment4q3Parser.T__12:
                self.state = 52
                self.match(Assignment4q3Parser.T__12)
                self.state = 53
                localctx.i2 = self.identifier()


            self.state = 56
            self.match(Assignment4q3Parser.T__1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Assignment4q3Parser.T__16) | (1 << Assignment4q3Parser.T__17) | (1 << Assignment4q3Parser.IDENTIFIER))) != 0):
                self.state = 57
                localctx.v1 = self.varDeclaration()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Assignment4q3Parser.T__2:
                self.state = 63
                localctx.m1 = self.methodDeclaration()
                localctx.value_attr = localctx.value_attr + localctx.m1.value_attr
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(Assignment4q3Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.t1 = None # TypeContext
            self.i1 = None # IdentifierContext

        def type(self):
            return self.getTypedRuleContext(Assignment4q3Parser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(Assignment4q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = Assignment4q3Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            localctx.t1 = self.type()
            self.state = 74
            localctx.i1 = self.identifier()
            self.state = 75
            self.match(Assignment4q3Parser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.t1 = None # TypeContext
            self.t2 = None # TypeContext
            self.i1 = None # IdentifierContext
            self.st = None # StatementContext
            self.e1 = None # ExpressionContext

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.IdentifierContext,i)


        def type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.TypeContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.TypeContext,i)


        def expression(self):
            return self.getTypedRuleContext(Assignment4q3Parser.ExpressionContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.StatementContext,i)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = Assignment4q3Parser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(Assignment4q3Parser.T__2)
            self.state = 78
            localctx.t1 = self.type()
            self.state = 79
            self.identifier()
            self.state = 80
            self.match(Assignment4q3Parser.T__6)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Assignment4q3Parser.T__16) | (1 << Assignment4q3Parser.T__17) | (1 << Assignment4q3Parser.IDENTIFIER))) != 0):
                self.state = 81
                localctx.t2 = self.type()
                self.state = 82
                localctx.i1 = self.identifier()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Assignment4q3Parser.T__14:
                    self.state = 83
                    self.match(Assignment4q3Parser.T__14)
                    self.state = 84
                    self.type()
                    self.state = 85
                    self.identifier()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 94
            self.match(Assignment4q3Parser.T__10)
            self.state = 95
            self.match(Assignment4q3Parser.T__1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self.varDeclaration() 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Assignment4q3Parser.T__1) | (1 << Assignment4q3Parser.T__18) | (1 << Assignment4q3Parser.T__20) | (1 << Assignment4q3Parser.T__21) | (1 << Assignment4q3Parser.IDENTIFIER))) != 0):
                self.state = 102
                localctx.st = self.statement()
                localctx.value_attr = localctx.value_attr + localctx.st.value_attr
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(Assignment4q3Parser.T__15)
            self.state = 111
            localctx.e1 = self.expression(0)
            localctx.value_attr = localctx.value_attr + '\n' + 'push ' + localctx.e1.value_attr + '\n' + 'RET' + '\n'
            self.state = 113
            self.match(Assignment4q3Parser.T__13)
            self.state = 114
            self.match(Assignment4q3Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.i1 = None # IdentifierContext

        def identifier(self):
            return self.getTypedRuleContext(Assignment4q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = Assignment4q3Parser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(Assignment4q3Parser.T__16)
                self.state = 117
                self.match(Assignment4q3Parser.T__8)
                self.state = 118
                self.match(Assignment4q3Parser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(Assignment4q3Parser.T__17)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(Assignment4q3Parser.T__16)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                localctx.i1 = self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.st = None # StatementContext
            self.e1 = None # ExpressionContext
            self.s1 = None # StatementContext
            self.s2 = None # StatementContext
            self.i1 = None # IdentifierContext
            self.e2 = None # ExpressionContext

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.StatementContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Assignment4q3Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Assignment4q3Parser.ExpressionContext,i)


        def identifier(self):
            return self.getTypedRuleContext(Assignment4q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Assignment4q3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Assignment4q3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(Assignment4q3Parser.T__1)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Assignment4q3Parser.T__1) | (1 << Assignment4q3Parser.T__18) | (1 << Assignment4q3Parser.T__20) | (1 << Assignment4q3Parser.T__21) | (1 << Assignment4q3Parser.IDENTIFIER))) != 0):
                    self.state = 125
                    localctx.st = self.statement()
                    localctx.value_attr = localctx.value_attr + localctx.st.value_attr
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 133
                self.match(Assignment4q3Parser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(Assignment4q3Parser.T__18)
                self.state = 135
                self.match(Assignment4q3Parser.T__6)
                self.state = 136
                localctx.e1 = self.expression(0)
                self.state = 137
                self.match(Assignment4q3Parser.T__10)
                self.state = 138
                localctx.s1 = self.statement()
                self.state = 139
                self.match(Assignment4q3Parser.T__19)
                self.state = 140
                localctx.s2 = self.statement()
                l_true = self.create_label()
                l_after = self.create_label()
                code = 'if ' + localctx.e1.value_attr + 'goto ' + l_true + '\n'
                code += localctx.s2.value_attr + '\n'
                code += 'goto ' + l_after + '\n'
                code += l_true + localctx.s1.value_attr + '\n'
                code += l_after + ': '
                localctx.value_attr = code + '\n'

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(Assignment4q3Parser.T__20)
                self.state = 144
                self.match(Assignment4q3Parser.T__6)
                self.state = 145
                localctx.e1 = self.expression(0)
                self.state = 146
                self.match(Assignment4q3Parser.T__10)
                self.state = 147
                localctx.s1 = self.statement()
                l_while = self.create_label()
                l_st = self.create_label()
                l_after = self.create_label()
                code = l_while + ' : if ' + localctx.e1.value_attr + ' goto ' + l_st + '\n'
                code += 'goto ' + l_after + '\n'
                code += l_st + ':' + localctx.s1.value_attr + '\n'
                code += 'goto ' + l_while + '\n'
                code += l_after + ': '
                localctx.value_attr = code + '\n'

                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.match(Assignment4q3Parser.T__21)
                self.state = 151
                self.match(Assignment4q3Parser.T__6)
                self.state = 152
                localctx.e1 = self.expression(0)
                self.state = 153
                self.match(Assignment4q3Parser.T__10)
                self.state = 154
                self.match(Assignment4q3Parser.T__13)
                t = self.create_temp()
                localctx.value_attr = t + ' = ' + localctx.e1.value_attr + '\n'
                localctx.value_attr += 'print(' + t + ')' + '\n'

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 157
                localctx.i1 = self.identifier()
                self.state = 158
                self.match(Assignment4q3Parser.T__22)
                self.state = 159
                localctx.e1 = self.expression(0)
                self.state = 160
                self.match(Assignment4q3Parser.T__13)
                t = self.create_temp()
                localctx.value_attr = t + ' = ' + localctx.e1.value_attr + '\n'
                localctx.value_attr += localctx.i1.value_attr + ' = ' + t + '\n'

                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 163
                localctx.i1 = self.identifier()
                self.state = 164
                self.match(Assignment4q3Parser.T__8)
                self.state = 165
                localctx.e1 = self.expression(0)
                self.state = 166
                self.match(Assignment4q3Parser.T__9)
                self.state = 167
                self.match(Assignment4q3Parser.T__22)
                self.state = 168
                localctx.e2 = self.expression(0)
                self.state = 169
                self.match(Assignment4q3Parser.T__13)
                t1 = self.create_temp()
                localctx.value_attr = t1 + ' = ' + localctx.e1.value_attr + '\n'
                t2 = self.create_temp()
                localctx.value_attr += t2 + ' = ' + localctx.e1.value_attr + '\n'
                localctx.value_attr += localctx.i1.value_attr + '[' + t1 + ']' + ' = ' + t2 + '\n'

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.amount_attr = str()
            self.e1 = None # ExpressionContext
            self._INTEGER_LITERAL = None # Token
            self.i1 = None # IdentifierContext
            self.e2 = None # ExpressionContext
            self.e3 = None # ExpressionContext

        def INTEGER_LITERAL(self):
            return self.getToken(Assignment4q3Parser.INTEGER_LITERAL, 0)
